# civic-icp-canister

./: .gitignore  .gitmodules  .ic-assets.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  dfx.json  package-lock.json  package.json
.cargo/: .config.toml
.github/workflows/: ci-local.yaml  ci-main.yaml  ci.yaml  gh-actions.yaml  linux.yaml
asdfsaf/: index.html
asdfsaf/assets/: index-3fdef115.js  index-89ec4151.js
lib/asset_util/src/: lib.rs
lib/canister_tests/src/: framework.rs
lib/vc_util/src/: issuer_api.rs
scripts/: deploy-civic-backend.sh  deploy-civic.sh  set-env-vars-production.sh  set-env-vars.sh  upgrade-civic-backend.sh  upgrade-civic.sh
src/civic-canister-frontend/: .env.local  .env.production  package.json
src/civic-canister-frontend/src/: App.tsx  config.ts
src/civic-canister-frontend/src/service/: CredentialService.ts
src/civic_canister_backend/: Cargo.toml  civic_canister_backend.did  deploy-civic.sh
src/civic_canister_backend/src/: config.rs  consent_message.rs  credential.rs  lib.rs  types.rs  utils.rs
src/civic_canister_backend/tests/: integration_tests.rs
src/civic_canister_frontend/: .env.local  .env.production  package.json  tsconfig.json  vite.config.js
src/civic_canister_frontend/scripts/: issue-credential.ts
src/civic_canister_frontend/src/: App.tsx  config.ts
src/civic_canister_frontend/src/assets/: .ic-assets.json
src/civic_canister_frontend/src/assets/.well-known/: ii-alternative-origins
src/civic_canister_frontend/src/service/: CredentialService.ts
src/civic_sign_frontend_demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
src/civic_sign_frontend_demo/src/: App.tsx  config.ts  index.scss  index.ts  retries.ts  testUtils.ts
src/civic_sign_frontend_demo/src/service/: CredentialService.ts  PrincipalService.ts
src/declarations/civic_canister_backend/: civic_canister_backend.did  civic_canister_backend.did.d.ts  civic_canister_backend.did.js  index.d.ts  index.js
src/declarations/civic_canister_frontend/: index.d.ts  index.js
src/declarations/relying_canister_frontend/: index.d.ts  index.js
src/icp-civic-canister-backend/: Cargo.toml  icp-civic-canister-backend.did
src/icp-civic-canister-backend/src/: lib.rs
src/icp-civic-canister-frontend/: .env.local  .env.production  package.json
src/icp-civic-canister-frontend/src/: App.tsx
src/icp-civic-canister-frontend/src/service/: CredentialService.ts
src/relying-canister-frontend/: .env.local  package.json  tsconfig.json
src/relying-canister-frontend/src/: App.tsx  config.ts
src/relying-canister-frontend/src/service/: CredentialService.ts
src/relying_canister_frontend/: .env.local  README.md  deploy-rp.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.plugins.ts
src/relying_canister_frontend/src/: App.tsx  config.ts  index.html  index.ts
src/relying_canister_frontend/src/service/: CredentialService.ts
webapp/: index.html  index.ts
