[package]
name = "civic_canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# local dependencies
canister_sig_util = { path = "../../lib/canister_sig_util" }
vc_util = { path = "../../lib/vc_util" }
asset_util = { path = "../../lib/asset_util" }
candid = "0.10"
ic-cdk = "0.12"
ic-stable-structures = "0.6.0"
ic-cdk-macros = "0.8"
ic-certification = "2.2"

include_dir = "0.7"
serde_bytes = "0.11"
serde = { version = "1", features = ["derive"] }


