[package]
name = "icp-civic-canister-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-macros = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
